@@ -46,7 +46,7 @@
 #' @param shape \enumerate{ \item if TRUE, creates icons (up to five categories) for values in the \code{features} variable; \item it also could be a vector of any strings that represents the levels of the  \code{features} variable; \item it also could be a string vector that represents the number of observations in dataset.}
 #' @param shape.size size of the \code{shape} icons
 #' @param shape.color color of the \code{shape} icons
-#' @param facet character vector that provide a grouping variable. If it is no \code{NULL}, then as a result a list of leaflets for \link{sync} or \link{latticeView} functions from \code{mapview} package is returned.
+#' @param facet character vector that provide a grouping variable. If it is no \code{NULL}, then as a result a list of leaflets for \code{sync} or \code{latticeView} functions from \code{mapview} package is returned.
 #' @param pipe.data this variable is important, when you use map.feature with dplyr pipes. Expected usage: pipe.data = .
 #' @param map.orientation a character verctor with values "Pacific" and "Atlantic". It distinguishes Pacific-centered and Atlantic-centered maps. By default is "Pacific".
 #' @param minimap.height The height of the minimap in pixels.
@@ -150,10 +150,9 @@
 #' @importFrom grDevices topo.colors
 #' @importFrom rowr cbind.fill
 #' @importFrom magrittr %>%
-#' @export %>%
 #' @importFrom leaflet.minicharts addMinicharts
 #' @importFrom leaflet.minicharts popupArgs
-#'
+#' @export %>%
 
 map.feature <- function(languages,
                         features = "",
@@ -953,6 +952,11 @@ map.feature <- function(languages,
         values = mapfeat.df$features,
         opacity = legend.opacity
       )
+    } else if(sum(mapfeat.df$features == "") == length(mapfeat.df$features) &
+              !is.null(title)){
+      m <- m %>% leaflet::addControl(
+        html = paste('<b>', title, "</b>"),
+        position = legend.position)
     }
 
     # map: stroke.legend ------------------------------------------------------
@@ -1003,86 +1007,86 @@ map.feature <- function(languages,
     list <- lapply(facet_levels, function(i){
       df <- mapfeat.df[mapfeat.df$facet == i,]
       map.feature <- map.feature(df$languages,
-                              features = df$features,
-                              label = df$label,
-                              popup = df$popup,
-                              latitude = df$lat,
-                              longitude = df$long,
-                              label.hide,
-                              label.fsize,
-                              label.font,
-                              label.position,
-                              label.emphasize,
-                              shape = NULL,
-                              shape.size,
-                              pipe.data,
-                              shape.color,
-                              stroke.features = NULL,
-                              density.estimation = NULL,
-                              density.method,
-                              density.estimation.color,
-                              density.estimation.opacity,
-                              density.points,
-                              density.width,
-                              density.legend,
-                              density.legend.opacity,
-                              density.legend.position,
-                              density.title,
-                              density.control,
-                              isogloss = NULL,
-                              isogloss.color,
-                              isogloss.opacity,
-                              isogloss.line.width,
-                              isogloss.width,
-                              color,
-                              stroke.color,
-                              image.url,
-                              image.width,
-                              image.height,
-                              image.X.shift,
-                              image.Y.shift,
-                              title,
-                              stroke.title,
-                              control,
-                              legend,
-                              legend.opacity,
-                              legend.position,
-                              stroke.legend,
-                              stroke.legend.opacity,
-                              stroke.legend.position,
-                              width,
-                              stroke.radius,
-                              opacity,
-                              stroke.opacity,
-                              scale.bar,
-                              scale.bar.position,
-                              minimap,
-                              minimap.position,
-                              minimap.width,
-                              minimap.height,
-                              facet = NULL,
-                              tile,
-                              tile.name,
-                              zoom.control,
-                              zoom.level,
-                              rectangle.lng = NULL,
-                              rectangle.lat = NULL,
-                              rectangle.color,
-                              line.lng = NULL,
-                              line.lat = NULL,
-                              line.type,
-                              line.color,
-                              line.opacity,
-                              line.label = NULL,
-                              line.width,
-                              graticule,
-                              minichart = NULL,
-                              minichart.data = NULL,
-                              minichart.time = NULL,
-                              minichart.labels = FALSE,
-                              map.orientation,
-                              glottolog.source,
-                              radius)
+                                 features = df$features,
+                                 label = df$label,
+                                 popup = df$popup,
+                                 latitude = df$lat,
+                                 longitude = df$long,
+                                 density.estimation = df$density.estimation,
+                                 stroke.features = stroke.features[mapfeat.df$facet == i],
+                                 isogloss = isogloss[mapfeat.df$facet == i,],
+                                 title = paste(i, ifelse(title == "", "", paste("<br>", title))),
+                                 minichart.data = minichart.data[mapfeat.df$facet == i,],
+                                 minichart.time = minichart.time[mapfeat.df$facet == i,],
+                                 minichart.labels = minichart.labels,
+                                 shape = shape,
+                                 label.hide = label.hide,
+                                 label.fsize = label.fsize,
+                                 label.font = label.font,
+                                 label.position = label.position,
+                                 label.emphasize = label.emphasize,
+                                 shape.size = shape.size,
+                                 pipe.data = pipe.data,
+                                 shape.color = shape.color,
+                                 density.method = density.method,
+                                 density.estimation.color = density.estimation.color,
+                                 density.estimation.opacity = density.estimation.opacity,
+                                 density.points = density.points,
+                                 density.width = density.width,
+                                 density.legend = density.legend,
+                                 density.legend.opacity = density.legend.opacity,
+                                 density.legend.position = density.legend.position,
+                                 density.title = density.title,
+                                 density.control = density.control,
+                                 isogloss.color = isogloss.color,
+                                 isogloss.opacity = isogloss.opacity,
+                                 isogloss.line.width = isogloss.line.width,
+                                 isogloss.width = isogloss.width,
+                                 color = color,
+                                 stroke.color = stroke.color,
+                                 image.url = image.url,
+                                 image.width = image.width,
+                                 image.height = image.height ,
+                                 image.X.shift = image.X.shift,
+                                 image.Y.shift = image.Y.shift,
+                                 stroke.title = stroke.title,
+                                 control = control,
+                                 legend = legend,
+                                 legend.opacity = legend.opacity,
+                                 legend.position = legend.position,
+                                 stroke.legend = stroke.legend,
+                                 stroke.legend.opacity = stroke.legend.opacity,
+                                 stroke.legend.position = stroke.legend.position,
+                                 width = width,
+                                 stroke.radius = stroke.radius,
+                                 opacity = opacity,
+                                 stroke.opacity = stroke.opacity,
+                                 scale.bar = scale.bar,
+                                 scale.bar.position = scale.bar.position,
+                                 minimap = minimap,
+                                 minimap.position = minimap.position,
+                                 minimap.width = minimap.width,
+                                 minimap.height = minimap.height,
+                                 facet = NULL,
+                                 tile = tile,
+                                 tile.name = tile.name,
+                                 zoom.control = zoom.control,
+                                 zoom.level = zoom.level,
+                                 rectangle.lng = rectangle.lng,
+                                 rectangle.lat = rectangle.lat,
+                                 rectangle.color = rectangle.color,
+                                 line.lng = line.lng,
+                                 line.lat = line.lat,
+                                 line.type = line.type,
+                                 line.color = line.color,
+                                 line.opacity = line.opacity,
+                                 line.label = line.label,
+                                 line.width = line.width,
+                                 graticule = graticule,
+                                 minichart = minichart,
+                                 map.orientation = map.orientation,
+                                 glottolog.source = glottolog.source,
+                                 radius = radius)
     })
     return(list)
   } else{
